--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,9 @@
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
             <version>3.0.0</version>
+            <configuration>
+                <mainClass>day02.amazon</mainClass> <!-- Sizin main sınıfınızın tam adı -->
+            </configuration>
             <executions>
                 <execution>
                     <goals>
