--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
                 <version>3.1.2</version>
                 <configuration>
                     <includes>
-                        <include>**/*Test.java</include>
+                        <include>**/amazon.java</include>
                     </includes>
                 </configuration>
             </plugin>
